force-app/main/default/objects/Microsoft_Solution_Detail__c/Microsoft_Solution_Detail__c.object-meta.xml
<CustomObject>
    <description>Detail about co-sell ready Microsoft Solution including solution name, solution identifier, publisher name and solution type</description>
    <label>Microsoft Solution Detail</label>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microsoft Solution Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>