force-app/main/default/objects/Microsoft_Solution_Detail__c/fields/Publisher_Name__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Name__c</fullName>
    <description>Publisher name of the solution</description>
    <inlineHelpText>Publisher name of the solution</inlineHelpText>
    <label>Publisher Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>