force-app/main/default/objects/Microsoft_Solution_Detail__c/fields/Solution_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Solution_Identifier__c</fullName>
    <description>Solution identifier</description>
    <inlineHelpText>Identifier associated with the solution</inlineHelpText>
    <label>Solution Identifier</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>