force-app/main/default/objects/Microsoft_Solution_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of solution - first party or third party</description>
    <inlineHelpText>Type (first-party or third-party) of the solution</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1P</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>